// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneralLayout :  renders a snapshot of <GeneralLayout /> using <ForgotPasswordForm /> as a test case 1`] = `
Array [
  <meta
    data-charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0"
    name="viewport"
  />,
  <meta
    content="KreateSell"
    name="title"
  />,
  <meta
    content="KreateSell"
    name="author"
  />,
  <meta
    content="#b8c1ec"
    name="theme-color"
  />,
  <meta
    content=""
    name="pagename"
  />,
  <meta
    content="https://kreatesell.com"
    name="url"
  />,
  <meta
    content="KreateSell"
    itemProp="name"
  />,
  <meta
    content="KreateSell"
    property="og:site_name"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="https://kreatesell.com"
    property="og:url"
  />,
  <meta
    content="KreateSell"
    property="og:title"
  />,
  <meta
    content=""
    property="og:description"
  />,
  <meta
    content="summary"
    property="twitter:card"
  />,
  <meta
    content="https://kreatesell.com"
    property="twitter:url"
  />,
  <meta
    content="KreateSell"
    property="twitter:title"
  />,
  <meta
    content="@KreateSell"
    name="twitter:site"
  />,
  <meta
    content="@KreateSell"
    name="twitter:creator"
  />,
  <meta
    content="A picture of KreateSell"
    property="twitter:image:alt"
  />,
  <meta
    content="e-commerce"
    name="keywords"
  />,
  <meta
    content="KreateSell , Sell more, Do less"
    name="description"
  />,
  <link
    href="/favicon.ico"
    rel="icon"
  />,
  <title>
    KreateSell | Forgot Password
  </title>,
  <nav
    className="navContainer false"
  >
    <div
      className="mobileMenuCont false"
      onClick={[Function]}
    >
      <div
        className="hamburger"
      />
    </div>
    <a
      className="imgCont"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0",
          }
        }
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
    </a>
    <div
      className="MobileLogo"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "padding": "10px 0",
          }
        }
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
    </div>
    <div
      className="navLinks"
    >
      <ul
        className="categoryLinks"
      >
        <li
          className="drop"
          onClick={[Function]}
        >
          <span
            className="navLinkDrop"
          >
            Resources
          </span>
          <img
            src="[jest.find('../utils')]"
          />
        </li>
        <li>
          <a
            className=""
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
        </li>
        <li>
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
        </li>
        <li>
          <a
            className=""
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
        </li>
        <li>
          <a
            className=""
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQS
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden"
    >
      <div
        className="inner"
      >
        <ul
          className="mobileCategoryLinks"
        >
          <li
            onClick={[Function]}
          >
            How it works
          </li>
          <li
            onClick={[Function]}
          >
            Features
          </li>
          <li
            onClick={[Function]}
          >
            Pricing
          </li>
          <li
            onClick={[Function]}
          >
            Blog
          </li>
          <li
            onClick={[Function]}
          >
            FAQs
          </li>
        </ul>
        <div
          className="mobileInput"
        >
          <div
            className="undefined inputContainer"
          >
            <label
              className="label undefined"
            />
            <input
              className="undefined false false input"
              placeholder="Enter your email.."
              type=""
            />
          </div>
        </div>
        <div
          className="mobileButton"
        >
          <button
            className="
			freeBtn
			button
			false 
			btnBlue
			false
			"
            type="submit"
          >
            <div
              className="buttonValue"
            >
              Get Started Free
            </div>
          </button>
        </div>
        <div
          className="benefits"
        >
          <span
            className="benefitSpan"
          >
            Signup for free
          </span>
          <span
            className="benefitSpan"
          >
            • Easy setup
          </span>
          <span
            className="benefitSpan"
          >
            • Fast payout
          </span>
        </div>
      </div>
    </div>
    <div
      className="btnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup
          </div>
        </button>
      </div>
    </div>
    <div
      className="mobileBtnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup Free
          </div>
        </button>
      </div>
    </div>
  </nav>,
  <main>
    <div
      className="undefined signup "
    >
      <div
        className="undefined formContainer"
      >
        <div
          className="form"
        >
          <h5
            className="formTitle"
          >
            Forgot Password
          </h5>
          <p
            className="opacity"
          >
            Enter your email and a reset token will be sent to you
          </p>
          <div
            className="body"
          >
            <form
              autoComplete="off"
              className="container"
              onSubmit={[Function]}
            >
              <div
                className="undefined inputContainer"
              >
                <label
                  className="label undefined"
                  htmlFor="username"
                >
                  Email or Phone number
                </label>
                <input
                  className="undefined false false input"
                  name="username"
                  onChange={[Function]}
                  placeholder="Enter your Email or Phone number"
                />
              </div>
              <button
                className="
			undefined
			button
			false 
			false
			primaryBlue
			"
                type="submit"
              >
                <div
                  className="buttonValue"
                >
                  Reset password
                </div>
              </button>
            </form>
            <div
              className="footer"
            >
              Already have an account?
               
              <a
                href="/login"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                Login here
              </a>
               
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>,
  <footer
    className="footer"
  >
    <div
      className="footerCont"
    >
      <div
        className="brand"
      >
        <div
          className="brandTitle"
          onClick={[Function]}
        >
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="mailto:info@kreatesell.com"
            rel="noopener noreferrer"
            target="blank"
          >
            info@kreatesell.com
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="tel:+2347019875432"
            rel="noopener noreferrer"
            target="blank"
          >
            +2347019875432
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="https://www.google.com/maps/place/Cocoa+House+Ibadan/@7.3875478,3.8767496,17z/data=!3m1!4b1!4m5!3m4!1s0x10398d0e3452ea31:0x8da53949f2293130!8m2!3d7.3875425!4d3.8789383"
            rel="noopener noreferrer"
            target="blank"
          >
            Cocoa house Dugbe, Ibadan
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Product
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Home
          </a>
          <a
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
          <a
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliates
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Company
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            About
          </a>
          <a
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Press
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Careers
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Integration
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Support
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Getting Started
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="https://wa.me/+2349016324945"
          >
            Contact Support
          </a>
          <a
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQ
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Legal
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/legal/cookie-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Cookies Policy
          </a>
          <a
            href="/legal/privacy-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Privacy Policy
          </a>
          <a
            href="/legal/affiliate-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliate Policy
          </a>
          <a
            href="/legal/terms-of-service"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Terms of Service
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Follow us
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Facebook
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Twitter
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Instagram
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Linkedin
          </a>
        </div>
      </div>
    </div>
    <div
      className="mobileFooter"
    >
      <div
        className="firstRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Product
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Pricing
            </a>
            <a
              href="/features"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Features
            </a>
            <a
              href="/how-it-works"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliates
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Releases
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Company
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Blog
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Press
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Careers
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Integration
            </a>
          </div>
        </div>
      </div>
      <div
        className="secondRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Support
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Getting Started
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Tutorials
            </a>
            <a
              href="https://wa.me/+2349016324945"
            >
              Contact Support
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              FAQ
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Legal
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/legal/cookie-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Cookies Policy
            </a>
            <a
              href="/legal/privacy-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Privacy Policy
            </a>
            <a
              href="/legal/affiliate-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliate Policy
            </a>
            <a
              href="/legal/terms-of-service"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Terms of Service
            </a>
          </div>
        </div>
      </div>
      <span
        className="thinLine"
      />
      <div
        className="brandMobile"
      >
        <img
          src="[jest.find('../utils')]"
        />
        <a
          className="mobileFooterEmail"
          href="mailto:info@kreatesell.com"
          rel="noopener noreferrer"
          target="blank"
        >
          info@kreatesell.com
        </a>
        <div
          className="engageUs"
        >
          Engage with us
        </div>
        <div
          className="mobileSocialLinks"
        >
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="mobileAddress"
        >
          Cocoa house Dugbe, Ibadan
        </div>
        <div
          className="mobileCopyright"
        >
          Copyright © 
          2022
           Kreatesell. All Rights Reserved
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`GeneralLayout :  renders a snapshot of <GeneralLayout /> using <ResetPasswordForm /> as a test case 1`] = `
Array [
  <meta
    data-charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0"
    name="viewport"
  />,
  <meta
    content="KreateSell"
    name="title"
  />,
  <meta
    content="KreateSell"
    name="author"
  />,
  <meta
    content="#b8c1ec"
    name="theme-color"
  />,
  <meta
    content=""
    name="pagename"
  />,
  <meta
    content="https://kreatesell.com"
    name="url"
  />,
  <meta
    content="KreateSell"
    itemProp="name"
  />,
  <meta
    content="KreateSell"
    property="og:site_name"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="https://kreatesell.com"
    property="og:url"
  />,
  <meta
    content="KreateSell"
    property="og:title"
  />,
  <meta
    content=""
    property="og:description"
  />,
  <meta
    content="summary"
    property="twitter:card"
  />,
  <meta
    content="https://kreatesell.com"
    property="twitter:url"
  />,
  <meta
    content="KreateSell"
    property="twitter:title"
  />,
  <meta
    content="@KreateSell"
    name="twitter:site"
  />,
  <meta
    content="@KreateSell"
    name="twitter:creator"
  />,
  <meta
    content="A picture of KreateSell"
    property="twitter:image:alt"
  />,
  <meta
    content="e-commerce"
    name="keywords"
  />,
  <meta
    content="KreateSell , Sell more, Do less"
    name="description"
  />,
  <link
    href="/favicon.ico"
    rel="icon"
  />,
  <title>
    KreateSell | Forgot Password
  </title>,
  <nav
    className="navContainer false"
  >
    <div
      className="mobileMenuCont false"
      onClick={[Function]}
    >
      <div
        className="hamburger"
      />
    </div>
    <a
      className="imgCont"
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "marginBottom": "10px",
            "padding": "20px 0 10px 0",
          }
        }
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
    </a>
    <div
      className="MobileLogo"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
            "padding": "10px 0",
          }
        }
      >
        <img
          src="[jest.find('../utils')]"
        />
      </div>
    </div>
    <div
      className="navLinks"
    >
      <ul
        className="categoryLinks"
      >
        <li
          className="drop"
          onClick={[Function]}
        >
          <span
            className="navLinkDrop"
          >
            Resources
          </span>
          <img
            src="[jest.find('../utils')]"
          />
        </li>
        <li>
          <a
            className=""
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
        </li>
        <li>
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
        </li>
        <li>
          <a
            className=""
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
        </li>
        <li>
          <a
            className=""
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQS
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden"
    >
      <div
        className="inner"
      >
        <ul
          className="mobileCategoryLinks"
        >
          <li
            onClick={[Function]}
          >
            How it works
          </li>
          <li
            onClick={[Function]}
          >
            Features
          </li>
          <li
            onClick={[Function]}
          >
            Pricing
          </li>
          <li
            onClick={[Function]}
          >
            Blog
          </li>
          <li
            onClick={[Function]}
          >
            FAQs
          </li>
        </ul>
        <div
          className="mobileInput"
        >
          <div
            className="undefined inputContainer"
          >
            <label
              className="label undefined"
            />
            <input
              className="undefined false false input"
              placeholder="Enter your email.."
              type=""
            />
          </div>
        </div>
        <div
          className="mobileButton"
        >
          <button
            className="
			freeBtn
			button
			false 
			btnBlue
			false
			"
            type="submit"
          >
            <div
              className="buttonValue"
            >
              Get Started Free
            </div>
          </button>
        </div>
        <div
          className="benefits"
        >
          <span
            className="benefitSpan"
          >
            Signup for free
          </span>
          <span
            className="benefitSpan"
          >
            • Easy setup
          </span>
          <span
            className="benefitSpan"
          >
            • Fast payout
          </span>
        </div>
      </div>
    </div>
    <div
      className="btnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup
          </div>
        </button>
      </div>
    </div>
    <div
      className="mobileBtnLinks"
    >
      <div
        className="loginBtn"
        onClick={[Function]}
      >
        <button
          className="
			loginBtnStyle
			button
			btnWhite 
			false
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Login
          </div>
        </button>
      </div>
      <div
        className="signUpBtn"
        onClick={[Function]}
      >
        <button
          className="
			signUpBtnStyle
			button
			false 
			btnBlue
			false
			"
          type="submit"
        >
          <div
            className="buttonValue"
          >
            Signup Free
          </div>
        </button>
      </div>
    </div>
  </nav>,
  <main>
    <div
      className="undefined signup "
    >
      <div
        className="undefined formContainer"
      >
        <div
          className="form"
        >
          <h5
            className="formTitle"
          >
            Forgot Password
          </h5>
          <p
            className="continue"
          >
            Set up a new password
          </p>
          <form
            autoComplete="off"
            className="container"
            onSubmit={[Function]}
          >
            <div
              className="undefined inputContainer"
            >
              <label
                className="label"
                htmlFor="password"
              >
                Enter New Password
              </label>
              <span
                className="ant-input-affix-wrapper ant-input-password undefined input"
                onMouseUp={[Function]}
              >
                <input
                  action="click"
                  className="ant-input"
                  name="password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Create new password"
                  style={null}
                  type="password"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <span
                    aria-label="eye-invisible"
                    className="anticon anticon-eye-invisible ant-input-password-icon"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    role="img"
                    tabIndex={-1}
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <div
              className="undefined inputContainer"
            >
              <label
                className="label"
                htmlFor="confirm_password"
              >
                Confirm New Password
              </label>
              <span
                className="ant-input-affix-wrapper ant-input-password undefined input"
                onMouseUp={[Function]}
              >
                <input
                  action="click"
                  className="ant-input"
                  name="confirm_password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Confirm new password"
                  style={null}
                  type="password"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <span
                    aria-label="eye-invisible"
                    className="anticon anticon-eye-invisible ant-input-password-icon"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    role="img"
                    tabIndex={-1}
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
            <button
              className="
			undefined
			button
			false 
			false
			primaryBlue
			"
              type="submit"
            >
              <div
                className="buttonValue"
              >
                Reset password
              </div>
            </button>
          </form>
          <div
            className="footer"
          >
            Already have an account?
             
            <a
              href="/login"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Login here
            </a>
             
          </div>
          <div
            className="
			modal
			hidden 
			false 
			undefined
			"
            onClick={[Function]}
          >
            <div
              className="container undefined"
              onClick={[Function]}
            />
          </div>
        </div>
      </div>
    </div>
  </main>,
  <footer
    className="footer"
  >
    <div
      className="footerCont"
    >
      <div
        className="brand"
      >
        <div
          className="brandTitle"
          onClick={[Function]}
        >
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="mailto:info@kreatesell.com"
            rel="noopener noreferrer"
            target="blank"
          >
            info@kreatesell.com
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="tel:+2347019875432"
            rel="noopener noreferrer"
            target="blank"
          >
            +2347019875432
          </a>
        </div>
        <div
          className="brandContact"
        >
          <div
            className="brandContactIcon"
          >
            <img
              src="[jest.find('../utils')]"
            />
          </div>
          <a
            className="text"
            href="https://www.google.com/maps/place/Cocoa+House+Ibadan/@7.3875478,3.8767496,17z/data=!3m1!4b1!4m5!3m4!1s0x10398d0e3452ea31:0x8da53949f2293130!8m2!3d7.3875425!4d3.8789383"
            rel="noopener noreferrer"
            target="blank"
          >
            Cocoa house Dugbe, Ibadan
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Product
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Home
          </a>
          <a
            href="/pricing"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Pricing
          </a>
          <a
            href="/features"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Features
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliates
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Company
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            About
          </a>
          <a
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Press
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Careers
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Integration
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Support
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Getting Started
          </a>
          <a
            href="/how-it-works"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Tutorials
          </a>
          <a
            href="https://wa.me/+2349016324945"
          >
            Contact Support
          </a>
          <a
            href="/faq"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            FAQ
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Legal
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/legal/cookie-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Cookies Policy
          </a>
          <a
            href="/legal/privacy-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Privacy Policy
          </a>
          <a
            href="/legal/affiliate-policy"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Affiliate Policy
          </a>
          <a
            href="/legal/terms-of-service"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Terms of Service
          </a>
        </div>
      </div>
      <div>
        <div
          className="categoryTitle"
        >
          Follow us
        </div>
        <div
          className="categoryLink"
        >
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Facebook
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Twitter
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Instagram
          </a>
          <a
            href="/undefined#"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Linkedin
          </a>
        </div>
      </div>
    </div>
    <div
      className="mobileFooter"
    >
      <div
        className="firstRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Product
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Home
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Pricing
            </a>
            <a
              href="/features"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Features
            </a>
            <a
              href="/how-it-works"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliates
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Releases
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Company
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              About
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Blog
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Press
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Careers
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Integration
            </a>
          </div>
        </div>
      </div>
      <div
        className="secondRow"
      >
        <div
          className="firstRowA"
        >
          <div
            className="categoryTitle"
          >
            Support
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Getting Started
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Tutorials
            </a>
            <a
              href="https://wa.me/+2349016324945"
            >
              Contact Support
            </a>
            <a
              href="/undefined#"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              FAQ
            </a>
          </div>
        </div>
        <div
          className="firstRowB"
        >
          <div
            className="categoryTitle"
          >
            Legal
          </div>
          <div
            className="categoryLink"
          >
            <a
              href="/legal/cookie-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Cookies Policy
            </a>
            <a
              href="/legal/privacy-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Privacy Policy
            </a>
            <a
              href="/legal/affiliate-policy"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Affiliate Policy
            </a>
            <a
              href="/legal/terms-of-service"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              Terms of Service
            </a>
          </div>
        </div>
      </div>
      <span
        className="thinLine"
      />
      <div
        className="brandMobile"
      >
        <img
          src="[jest.find('../utils')]"
        />
        <a
          className="mobileFooterEmail"
          href="mailto:info@kreatesell.com"
          rel="noopener noreferrer"
          target="blank"
        >
          info@kreatesell.com
        </a>
        <div
          className="engageUs"
        >
          Engage with us
        </div>
        <div
          className="mobileSocialLinks"
        >
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
          <img
            src="[jest.find('../utils')]"
          />
        </div>
        <div
          className="mobileAddress"
        >
          Cocoa house Dugbe, Ibadan
        </div>
        <div
          className="mobileCopyright"
        >
          Copyright © 
          2022
           Kreatesell. All Rights Reserved
        </div>
      </div>
    </div>
  </footer>,
]
`;
